--- a/samples/EFCore/Eventfully.Samples.ConsoleApp/Eventfully.Samples.ConsoleApp.csproj
+++ b/samples/EFCore/Eventfully.Samples.ConsoleApp/Eventfully.Samples.ConsoleApp.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
