initial test suite for efcore sql server outbox

--- a/samples/EFCore/Eventfully.Samples.ConsoleApp/appsettings.json
+++ b/samples/EFCore/Eventfully.Samples.ConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationConnection": "Server=(localdb)\\mssqllocaldb;Database=messaging-console-samples;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationConnection": "Server=(localdb)\\mssqllocaldb;Database=eventfully-dev;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "SampleAESKey": "nZr4u7x!A%D*F-JaNdRgUkXp2s5v8y/B",
