--- a/tests/Eventfully.EFCoreOutbox.IntegrationTests/Eventfully.EFCoreOutbox.IntegrationTests.csproj
+++ b/tests/Eventfully.EFCoreOutbox.IntegrationTests/Eventfully.EFCoreOutbox.IntegrationTests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
     <PackageReference Include="Respawn" Version="3.2.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
