wip - remove dependency and refactor dependency injection

--- a/samples/EFCore/Eventfully.Samples.ConsoleApp/Eventfully.Samples.ConsoleApp.csproj
+++ b/samples/EFCore/Eventfully.Samples.ConsoleApp/Eventfully.Samples.ConsoleApp.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Eventfully.Core\Eventfully.Core.csproj" />
     <ProjectReference Include="..\..\..\src\Eventfully.EFCoreOutbox\Eventfully.EFCoreOutbox.csproj" />
+    <ProjectReference Include="..\..\..\src\Eventfully.MicrosoftDependencyInjection\Eventfully.Extensions.Microsoft.DependencyInjection.csproj" />
   </ItemGroup>
 
 </Project>
