--- a/samples/EFCore/Eventfully.Samples.ConsoleApp/Eventfully.Samples.ConsoleApp.csproj
+++ b/samples/EFCore/Eventfully.Samples.ConsoleApp/Eventfully.Samples.ConsoleApp.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
+    <PackageReference Include="NewId" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
