--- a/samples/EFCore/Eventfully.Samples.ConsoleApp/appsettings.json
+++ b/samples/EFCore/Eventfully.Samples.ConsoleApp/appsettings.json
@@ -10,7 +10,7 @@
       "Default": "Warning",
       "System": "Warning",
       "Microsoft": "Warning",
-      "Messaging": "Information"
+      "Eventfully": "Information"
     }
   }
 }
