integration test parallelism cleanup

--- a/tests/Eventfully.Transports.AzureServiceBus.IntegrationTests/Eventfully.Transports.AzureServiceBus.IntegrationTests.csproj
+++ b/tests/Eventfully.Transports.AzureServiceBus.IntegrationTests/Eventfully.Transports.AzureServiceBus.IntegrationTests.csproj
@@ -45,4 +45,10 @@
     <ProjectReference Include="..\..\src\Eventfully.Transports.AzureServiceBus\Eventfully.Transports.AzureServiceBus.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
