--- a/tests/Eventfully.EFCoreOutbox.IntegrationTests/Eventfully.EFCoreOutbox.IntegrationTests.csproj
+++ b/tests/Eventfully.EFCoreOutbox.IntegrationTests/Eventfully.EFCoreOutbox.IntegrationTests.csproj
@@ -36,6 +36,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
