--- a/tests/Eventfully.Semaphore.SqlServer.IntegrationTests/Eventfully.Semaphore.SqlServer.IntegrationTests.csproj
+++ b/tests/Eventfully.Semaphore.SqlServer.IntegrationTests/Eventfully.Semaphore.SqlServer.IntegrationTests.csproj
@@ -45,4 +45,10 @@
     <ProjectReference Include="..\..\src\Eventfully.Semaphore.SqlServer\Eventfully.Semaphore.SqlServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
