--- a/src/Eventfully.Semaphore.SqlServer/Eventfully.Semaphore.SqlServer.csproj
+++ b/src/Eventfully.Semaphore.SqlServer/Eventfully.Semaphore.SqlServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -10,6 +10,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Eventfully.Core\Eventfully.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="CreateSqlSemaphoreTable.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="README.txt">
+      <Pack>true</Pack>
+      <PackagePath>\</PackagePath>
+    </Content>
   </ItemGroup>
 
 </Project>
