--- a/src/Eventfully.EFCoreOutbox/Eventfully.EFCoreOutbox.csproj
+++ b/src/Eventfully.EFCoreOutbox/Eventfully.EFCoreOutbox.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="NewId" Version="3.0.2" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.0" />
   </ItemGroup>
 
   <ItemGroup>
