initial working analyzer for saga/process manager message maps

--- a/tests/Eventfully.Core.Analyzers.Test/Eventfully.Core.Analyzers.Test.csproj
+++ b/tests/Eventfully.Core.Analyzers.Test/Eventfully.Core.Analyzers.Test.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers.csproj" />
+    <ProjectReference Include="..\..\analyzers\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers.csproj" />
+    <ProjectReference Include="..\..\src\Eventfully.Core\Eventfully.Core.csproj" />
   </ItemGroup>
 
 </Project>
