--- a/src/Eventfully.MicrosoftDependencyInjection/Eventfully.Extensions.Microsoft.DependencyInjection.csproj
+++ b/src/Eventfully.MicrosoftDependencyInjection/Eventfully.Extensions.Microsoft.DependencyInjection.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Scrutor" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
