--- a/src/Eventfully.Core/Eventfully.Core.csproj
+++ b/src/Eventfully.Core/Eventfully.Core.csproj
@@ -12,7 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\analyzers\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers.csproj" />
+    <ProjectReference PrivateAssets="All"  Pack="false" Include="..\..\analyzers\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers\Eventfully.Core.Analyzers.csproj" />
+    <None Include="$(OutputPath)\Eventfully.Core.Analyzers.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    <None Include="$(OutputPath)\tools\*.ps1"  Pack="true" PackagePath="tools" />
   </ItemGroup>
 
+ 
 </Project>
